--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://MihaelaDachii.github.io/finalproject-reacjs",
   "eslintConfig": {
     "extends": [
       "react-app",
